# OxMgr

./: .gitignore  BENCHMARK.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  benchmark.json
.github/workflows/: benchmark.yml
bench/fixtures/: idle.js
docs/: ARCHITECTURE.md  BENCHMARKS.md  CLI.md  OXFILE.md  PULL_WEBHOOK.md  README.md  USAGE.md  install.md
scripts/: benchmark_oxmgr_vs_pm2.py  smoke_packaging.sh
src/: daemon.rs  logging.rs  process_manager.rs  storage.rs
tests/: e2e_cli.rs
