[package]
name = "oxmgr"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Oxmgr - lightweight language-agnostic process manager"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
crossterm = "0.29"
json5 = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shell-words = "1.1"
regex = "1.11"
sysinfo = "0.38"
thiserror = "2.0"
tokio = { version = "1.44", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "process",
    "signal",
    "fs",
    "time",
    "io-util",
    "sync",
] }
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
url = "2.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal", "process", "user"] }

[dev-dependencies]
serial_test = "3.2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
